--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GeoAPI" version="1.7.4" targetFramework="MonoAndroid60" />
+  <package id="NetTopologySuite" version="1.14" targetFramework="MonoAndroid60" />
+  <package id="NetTopologySuite.IO" version="1.14.0.1" targetFramework="MonoAndroid60" />
+  <package id="NetTopologySuite.IO.GeoJSON" version="1.14" targetFramework="MonoAndroid60" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.0.1.3" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.0.1.3" targetFramework="MonoAndroid60" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.0.1.3" targetFramework="MonoAndroid60" />
