--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="GeoAPI" version="1.7.4" targetFramework="xamarinios10" />
+  <package id="NetTopologySuite" version="1.14" targetFramework="xamarinios10" />
+  <package id="NetTopologySuite.IO.GeoJSON" version="1.14" targetFramework="xamarinios10" />
+  <package id="Newtonsoft.Json" version="8.0.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="xamarinios10" />
   <package id="Xamarin.Insights" version="1.11.3" targetFramework="xamarinios10" />
 </packages>
