--- a/iOS/packages.config
+++ b/iOS/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="GeoAPI" version="1.7.4" targetFramework="xamarinios10" />
   <package id="NetTopologySuite" version="1.14" targetFramework="xamarinios10" />
+  <package id="NetTopologySuite.IO" version="1.14.0.1" targetFramework="xamarinios10" />
   <package id="NetTopologySuite.IO.GeoJSON" version="1.14" targetFramework="xamarinios10" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.0.6490" targetFramework="xamarinios10" />
